objects/FSL_SPCertifications_Stage__c.object
<CustomObject>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OEMCode__c</fullName>
        <label>OEMCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM_Name__c</fullName>
        <label>OEM_Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMN__c</fullName>
        <label>SMN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPCertRowId__c</fullName>
        <externalId>true</externalId>
        <label>SPCertRowId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPCode__c</fullName>
        <label>SPCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPRowId__c</fullName>
        <label>SPRowId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceLevel__c</fullName>
        <label>ServiceLevel</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <label>FSL_SPCertifications_Stage</label>
    <nameField>
        <label>FSL_SPCertifications_Stage__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSL_SPCertifications_Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>